# chat-app

./: .gitignore  Cargo.toml  README.md  package.json
src/: global.d.ts  js_module.d.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  serializer.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/dao/: mapper.rs  models.rs
src-tauri/src/plugins/openai/: Cargo.toml  build.rs
src-tauri/src/plugins/openai/permissions/: default.toml
src-tauri/src/plugins/openai/src/: api_response.md  commands.rs  lib.rs  mapper.rs  models.rs  openai_client.rs  request_models.rs  response.json  response.rs  stream_response.txt
src-tauri/src/plugins/request/: Cargo.toml  build.rs
src-tauri/src/plugins/request/permissions/: default.toml
src-tauri/src/plugins/request/src/: commands.rs  lib.rs  proxy.rs
src-tauri/src/plugins/sqlite/: Cargo.toml  build.rs
src-tauri/src/plugins/sqlite/permissions/: default.toml
src-tauri/src/plugins/sqlite/src/: error.rs  lib.rs
src/components/: Alert.vue  ApiTable.vue  ChatBox.vue  Confirm.vue  MessageBox.vue  TextButton.vue
src/constants/: index.ts  models.ts
src/layout/: Main.vue  Siderbar.vue
src/router/: index.ts
src/views/: Index.vue  Settings.vue
