[package]
name = "chat-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["wry"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-http.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-chat-sqlite.workspace = true
tauri-plugin-chat-openai.workspace = true
tauri-plugin-chat-request.workspace = true
chrono = { workspace = true }
rs-snowflake = { workspace = true }
anyhow = { workspace = true }
static_init = { workspace = true }
tokio = { workspace = true, features = ["full"] }
derive_builder.workspace = true
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
