[package]
name = "tauri-plugin-chat-openai"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-chat-openai"

[dependencies]
tauri = { workspace = true, features = ["wry"] }
tauri-plugin-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
derive_builder.workspace = true
tauri-plugin-chat-sqlite.workspace = true
tokio.workspace = true
rusqlite.workspace = true

[build-dependencies]
tauri-plugin.workspace = true