[package]
name = "tauri-plugin-chat-request"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-chat-request"

[dependencies]
tauri.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true 
rusqlite.workspace = true
tauri-plugin-http.workspace = true

[build-dependencies]
tauri-plugin.workspace = true